src/test/deca/syntax/valid/resultats/test24_class-lex.res
'class': [@0,261:265='class',<7>,14:0]
IDENT: [@1,267:267='A',<26>,14:6]
'{': [@2,269:269='{',<36>,14:8]
'}': [@3,271:271='}',<37>,15:0]
'class': [@4,274:278='class',<7>,17:0]
IDENT: [@5,280:280='B',<26>,17:6]
'{': [@6,282:282='{',<36>,17:8]
'}': [@7,284:284='}',<37>,18:0]
'class': [@8,287:291='class',<7>,20:0]
IDENT: [@9,293:293='C',<26>,20:6]
'extends': [@10,295:301='extends',<8>,20:8]
IDENT: [@11,303:303='A',<26>,20:16]
'{': [@12,305:305='{',<36>,20:18]
'}': [@13,307:307='}',<37>,21:0]
'{': [@14,310:310='{',<36>,23:0]
IDENT: [@15,313:313='A',<26>,24:1]
IDENT: [@16,315:315='a',<26>,24:3]
'=': [@17,317:317='=',<29>,24:5]
'new': [@18,319:321='new',<13>,24:7]
IDENT: [@19,323:323='A',<26>,24:11]
'(': [@20,324:324='(',<34>,24:12]
')': [@21,325:325=')',<35>,24:13]
';': [@22,326:326=';',<39>,24:14]
IDENT: [@23,329:329='C',<26>,25:1]
IDENT: [@24,331:331='c',<26>,25:3]
'=': [@25,333:333='=',<29>,25:5]
'new': [@26,335:337='new',<13>,25:7]
IDENT: [@27,339:339='C',<26>,25:11]
'(': [@28,340:340='(',<34>,25:12]
')': [@29,341:341=')',<35>,25:13]
';': [@30,342:342=';',<39>,25:14]
'println': [@31,345:351='println',<18>,26:1]
'(': [@32,352:352='(',<34>,26:8]
STRING: [@33,353:354='""',<47>,26:9]
')': [@34,355:355=')',<35>,26:11]
';': [@35,356:356=';',<39>,26:12]
'}': [@36,358:358='}',<37>,27:0]
