src/test/deca/syntax/invalid/resultats/test45_decl_method-lex.res
'class': [@0,331:335='class',<7>,15:0]
IDENT: [@1,337:337='A',<26>,15:6]
'{': [@2,339:339='{',<36>,15:8]
IDENT: [@3,342:344='int',<26>,16:1]
IDENT: [@4,346:348='fct',<26>,16:5]
'(': [@5,349:349='(',<34>,16:8]
IDENT: [@6,350:352='int',<26>,16:9]
IDENT: [@7,354:354='a',<26>,16:13]
',': [@8,355:355=',',<33>,16:14]
')': [@9,356:356=')',<35>,16:15]
'{': [@10,357:357='{',<36>,16:16]
'}': [@11,358:358='}',<37>,16:17]
'}': [@12,360:360='}',<37>,17:0]
